# stm32f303k8-rust-example

./: Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config
idea/run_configurations/: Cargo Build.run.xml  Download & Run.run.xml
src/: main.rs
