# stm32f303k8-rust-example
# Copyright (c) 2022 RedFantom
# Available under GNU GPLv3
[package]
name = "stm32f303k8-rust-example"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = { version = "0.7.1", features=["device", ] }
cortex-m-semihosting = "0.3.4"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
rtt-target = "0.3.1"
stm32f3xx-hal = { version = "0.9.0", features=["stm32f303x8", "rt"]}
